<resources>
    <string name="app_name">Brain Trainer Maths</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="tutorial">Tutorial</string>
    <string name="preview_top_5_highscores">preview top 5 highscores</string>
    <string name="highscore">Highscore</string>
    <string name="todo">TODO</string>
    <string name="eventlistener_for_playing_video">EventListener for playing video</string>
    <string name="to_access_settings_page">To access settings page</string>
    <string name="mockText">RIP please get more than ONE to be worth to get on the high score</string>
    <string name="please_enter_below_what_you_want_the_timer_to_be_set_to">Please enter below what you want the timer to be set to:</string>
    <string name="timer">Timer...</string>
    <string name="change">change</string>
    <string name="home">home</string>
</resources>